# pondera

./: .env_template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SUMMARY.md  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docs/: TESTING.md
src/pondera/: __init__.py  api.py  cli.py  errors.py  logging.py  settings.py  utils.py
src/pondera/io/: artifacts.py
src/pondera/judge/: __init__.py  base.py  protocol.py  pydantic_ai.py
src/pondera/models/: case.py  evaluation.py  judgment.py  multi_evaluation.py  rubric.py  run.py
src/pondera/runner/: base.py  custom_runner_template.py
tests/: test_api.py  test_cli.py  test_logging.py  test_model_repr.py  test_runner_error_handling.py  test_settings.py  test_timeout.py  test_utils.py
tests/data/: basic_test.yaml  complex_reasoning.yaml  genes_per_chr.yaml  high_threshold_test.yaml  math_problem.yml  timeout_case.yaml
tests/data/subdirectory/: nested_test.yaml
tests/integration/: __init__.py  test_api_custom_judge.py  test_api_integration.py  test_cli_integration.py  test_real_integration.py  test_runner.py
tests/integration/data/: basic_integration.yaml  math_test.yaml  rubric_test.yaml
tests/io/: test_artifacts.py
tests/judge/: test_base.py  test_pydantic_ai.py
tests/models/: test_case.py  test_evaluation.py  test_judgment.py  test_rubric.py  test_run.py
tests/runner/: test_base.py  test_custom_runner_template.py
